Make sure the image shows in full on Firefox also

--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -3,5 +3,10 @@ li a {
 }
 
 body {
+    height: 100%;
     background: white url("images/magic-pony-django-wallpaper.png") no-repeat right bottom;
+}
+
+html {
+    height: 100%;
 }
